--- a/root/package.json
+++ b/root/package.json
@@ -30,6 +30,7 @@
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
     "bootstrap": "^5.3.8",
+    "chart.js": "^4.5.1",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.26.17",
